added covid_testing data and codebook

--- a/description_docs/blood_storage_prostate_desc.Rmd
+++ b/description_docs/blood_storage_prostate_desc.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Prostate blood storage dataset"
+title: "Prostate blood storage codebook"
 author: "Peter Higgins"
 date: "10/18/2020"
 output: html_document
