--- a/vignettes/package_intro.Rmd
+++ b/vignettes/package_intro.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "package_intro"
+title: "Introduction to the {medicaldata} package"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{package_intro}
@@ -7,18 +7,13 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-```
 
-```{r setup}
-library(medicaldata)
 ```
-
-# Introduction to the {medicaldata} package
 
 The {medicaldata} package is purely a data package, for the purpose of collecting well-documented medical datasets in one package for teaching to medical students, residents, fellows, nurses, pharmacists, physician assistants, and anyone else who wants to learn R for use with medical data. 
 
