added help file to theoph

--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Introduction to the {medicaldata} package
+title: Introduction
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Introduction}
