--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,8 @@ and `covid_testing` is the name of the dataset.<br>
 
 5. You can click on the links below to view the codebook and/or description document for each dataset. This information is also available under the Reference tab above, or within R by using `help(dataset_name)`. <br>
 
+## Data Donations
+If you have access to data from a randomized, controlled clinical trial, or a prospective cohort study, or even a case-control study, please consider obtaining the appropriate permissions, anonymizing the data, and donating the dataset for teaching purposes to add to this package. Open an issue to open the discussion of a data donation.
 
 ## List of Datasets
 Click on links below for more details about the dataset itself in the Description Document, and more details about the variables included in the dataset in the Codebook. Note that each dataset also has a help file that you can use within R or RStudio, by entering `help("dataset_name")` in the Console pane.
@@ -43,7 +45,7 @@ Click on links below for more details about the dataset itself in the Descriptio
 | covid_testing    |   [covid_desc](https://github.com/higgi13425/medicaldata/blob/master/man/description_docs/covid_desc.pdf)    | [covid_codebook](https://github.com/higgi13425/medicaldata/blob/master/man/codebooks/covid_testing_codebook.pdf)|
 | blood_storage   | [blood_storage_desc](https://www.causeweb.org/tshs/datasets/Blood%20Storage%20Dataset%20Introduction.pdf)  |  [blood_storage_codebook](https://www.causeweb.org/tshs/datasets/Blood%20Storage%20Data%20Dictionary.pdf) |
 | cytomegalovirus | [cytomegalovirus_desc](https://www.causeweb.org/tshs/datasets/Cytomegalovirus%20Dataset%20Introduction.pdf) |   [cytomegalovirus_codebook](https://www.causeweb.org/tshs/datasets/Cytomegalovirus%20Data%20Dictionary.pdf)|
-| esoph_ca| [esoph_ca_desc](https://github.com/higgi13425/medicaldata/blob/master/man/description_docs/esoph_ca_desc.pdf) |  [esoph_ca_codebook](https://github.com/higgi13425/medicaldata/blob/master/man/codebooks/esoph__cacodebook.pdf)|
+| esoph_ca| [esoph_ca_desc](https://github.com/higgi13425/medicaldata/blob/master/man/description_docs/esoph_ca_desc.pdf) |  [esoph_ca_codebook](https://github.com/higgi13425/medicaldata/blob/master/man/codebooks/esoph_ca_codebook.pdf)|
 | laryngoscope    | [laryngoscope_desc](https://www.causeweb.org/tshs/datasets/Laryngoscope%20Dataset%20Introduction.pdf)  |  [laryngoscope_codebook](https://www.causeweb.org/tshs/datasets/Laryngoscope%20Data%20Dictionary.pdf)|
 | licorice_gargle | [licorice_gargle_desc](https://www.causeweb.org/tshs/datasets/Licorice%20Gargle%20Dataset%20Introduction.pdf) |  [licorice_gargle_codebook](https://www.causeweb.org/tshs/datasets/Licorice%20Gargle%20Data%20Dictionary.pdf)|
 | opt   | [opt_desc](https://www.causeweb.org/tshs/datasets/OPT_Dataset_Introduction.pdf)  |    [opt_codebook](https://www.causeweb.org/tshs/datasets/OPT_Data_Dictionary.pdf)  |
