commit after spell_check()

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-This is a data package with several medical datasets for teaching Reproducible Medical Research with R. The link to the pkgdown reference website for {medicaldata} is [here](https://higgi13425.github.io/medicaldata/) and in the links at the right. These range from reconstructed versions of James Lind's scurvy dataset (1757) and the original Streptomycin for Tuberculosis trial (1948), a 2012 RCT of indomethacin to prevent post-ERCP pancreatitis that I was involved in, to cohort data on SARS-CoV2 testing results (2020). Many of the datasets come from the American Statistical Association's TSHS (Teaching Statistics in the Health Sciences) [Resources Portal](https://www.causeweb.org/tshs/category/dataset/), maintained by [Carol Bigelow](https://www.umass.edu/sphhs/person/carol-bigelow) at the University of Massachusetts (with permission).
+This is a data package with 15 medical datasets for teaching Reproducible Medical Research with R. The link to the pkgdown reference website for {medicaldata} is [here](https://higgi13425.github.io/medicaldata/) and in the links at the right. This package will be useful for anyone teaching R to medical professionals, including doctors, nurses, trainees, and students. <br> <br>
+These datasets range from reconstructed versions of James Lind's scurvy dataset (1757) and the original Streptomycin for Tuberculosis trial (1948), a 2012 RCT of indomethacin to prevent post-ERCP pancreatitis that I was involved in, to cohort data on SARS-CoV2 testing results (2020). Many of the datasets come from the American Statistical Association's TSHS (Teaching Statistics in the Health Sciences) [Resources Portal](https://www.causeweb.org/tshs/category/dataset/), maintained by [Carol Bigelow](https://www.umass.edu/sphhs/person/carol-bigelow) at the University of Massachusetts (with permission).
 
 ## How to Install and Use {medicaldata} Datasets
 1. Install with: `remotes::install_github("higgi13425/medicaldata")`     
@@ -28,7 +29,9 @@ This is a data package with several medical datasets for teaching Reproducible M
 where `covid` is the name of the new object,
 and `covid_testing` is the name of the dataset.<br>
 
-5. You can click on the links below to view the codebook and/or description document for each dataset. This information is also available under the Reference tab above, or within R by using `help(dataset_name)`. <br>
+5. Articles (vignettes) on how to use the datasets can be found at the pkgdown [website](https://higgi13425.github.io/medicaldata/) under the **Articles** tab.
+
+6. You can click on the links below to view the codebook and/or description document for each dataset. This information is also available under the Reference tab above, or within R by using `help(dataset_name)`. <br>
 
 ## Data Donations
 If you have access to data from a randomized, controlled clinical trial, or a prospective cohort study, or even a case-control study, please consider obtaining the appropriate permissions, anonymizing the data, and donating the dataset for teaching purposes to add to this package. Open an issue to open the discussion of a data donation.
