--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,10 @@ This is a data package with 15 medical datasets for teaching Reproducible Medica
 These datasets range from reconstructed versions of James Lind's scurvy dataset (1757) and the original Streptomycin for Tuberculosis trial (1948), a 2012 RCT of indomethacin to prevent post-ERCP pancreatitis that I was involved in, to cohort data on SARS-CoV2 testing results (2020). Many of the datasets come from the American Statistical Association's TSHS (Teaching Statistics in the Health Sciences) [Resources Portal](https://www.causeweb.org/tshs/category/dataset/), maintained by [Carol Bigelow](https://www.umass.edu/sphhs/person/carol-bigelow) at the University of Massachusetts (with permission).
 
 ## How to Install and Use {medicaldata} Datasets
-1. Install with: `remotes::install_github("higgi13425/medicaldata")`     
-2. Then load the package with `library(medicaldata)`    
+1. Install the stable, current CRAN version with `install.packages("medicaldata")`. If you want to try out the in-development version (which may have new datasets and vignettes, but which may also be intermittently wonky), install with: `remotes::install_github("higgi13425/medicaldata")` 
+
+2. Then load the package with `library(medicaldata)`   
+
 3. Then you can list the datasets available with `data(package = "medicaldata")`    
 
 4. Then assign a particular dataset to a named object in your environment with: <br>
@@ -31,10 +33,10 @@ and `covid_testing` is the name of the dataset.<br>
 
 5. Articles (vignettes) on how to use the datasets can be found at the pkgdown [website](https://higgi13425.github.io/medicaldata/) under the **Articles** tab.
 
-6. You can click on the links below to view the codebook and/or description document for each dataset. This information is also available under the Reference tab above, or within R by using `help(dataset_name)`. <br>
+6. You can click on the links below to view the  description document and/or  codebook for each dataset. This information is also available under the Reference tab above, or within R by using `help(dataset_name)`. <br>
 
 ## Please Donate Datasets
-If you have access to data from a randomized, controlled clinical trial, or a prospective cohort study, or even a case-control study, please consider obtaining the appropriate permissions, anonymizing the data, and donating the dataset for teaching purposes to add to this package. Open an issue to open the discussion of a data donation.
+If you have access to data from a randomized, controlled clinical trial, or a prospective cohort study, or even a case-control study, please consider obtaining the appropriate permissions, anonymizing the data, and donating the dataset for teaching purposes to add to this package. Open an issue on the github page (source code link at the top right) to open the discussion of a data donation. I am happy to help with anonymization.
 
 ## List of Datasets
 Click on links below for more details about the dataset itself in the Description Document, and more details about the variables included in the dataset in the Codebook. Note that each dataset also has a help file that you can use within R or RStudio, by entering `help("dataset_name")` in the Console pane.
