--- a/man/description_docs/scurvy_desc.Rmd
+++ b/man/description_docs/scurvy_desc.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Scurvy Dataset Description Document"
+title: "Cath Dataset Description Document"
 author: "Peter Higgins"
 date: "8/10/2021"
 output: 
