Resized logo for website

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# medicaldata <img src='man/figures/hex-medicaldata.png' align="right" height="240">
+# medicaldata <a href="https://higgi13425.github.io/medicaldata/"><img src="man/figures/logo.png" align="right" height="139" /></a>
 
 ## Overview
 
