--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 ## Overview
 
 This is a data package with 17 medical datasets for teaching Reproducible Medical Research with R. The link to the pkgdown reference website for {medicaldata} is [here](https://higgi13425.github.io/medicaldata/) and in the links at the right. This package will be useful for anyone teaching R to medical professionals, including doctors, nurses, trainees, and students. <br> <br>
-These datasets range from reconstructed versions of James Lind's scurvy dataset (1757) and the original Streptomycin for Tuberculosis trial (1948), a 2012 RCT of indomethacin to prevent post-ERCP pancreatitis that I was involved in, to cohort data on SARS-CoV2 testing results (2020). Many of the datasets come from the American Statistical Association's TSHS (Teaching Statistics in the Health Sciences) [Resources Portal](https://www.causeweb.org/tshs/category/dataset/), maintained by [Carol Bigelow](https://www.umass.edu/sphhs/person/carol-bigelow) at the University of Massachusetts (with permission). A growing number of datasets in the dev version were generously donated by [Frank Harrell](https://www.fharrell.com) from his website [here](https://hbiostat.org/data/). These datasets are currently only in the dev version of the package on github.com, which should make it to CRAN in January 2022.
+These datasets range from reconstructed versions of James Lind's scurvy dataset (1757) and the original Streptomycin for Tuberculosis trial (1948), a 2012 RCT of indomethacin to prevent post-ERCP pancreatitis that I was involved in, to cohort data on SARS-CoV2 testing results (2020). Many of the datasets come from the American Statistical Association's TSHS (Teaching Statistics in the Health Sciences) [Resources Portal](https://www.causeweb.org/tshs/category/dataset/), maintained by [Carol Bigelow](https://www.umass.edu/sphhs/person/carol-bigelow) at the University of Massachusetts (with permission). A growing number of datasets in the dev version were generously donated by [Frank Harrell](https://www.fharrell.com) from his website [here](https://hbiostat.org/data/). These datasets are currently only in the [dev version](https://github.com/higgi13425/medicaldata/) of the package on github.com, which should make it to CRAN in June 2022.
 
 ## How to Install and Use {medicaldata} Datasets
 1. Install the stable, current CRAN version with `install.packages("medicaldata")`. If you want to try out the in-development version (which may have new datasets and vignettes, but which may also be intermittently wonky), install with: `remotes::install_github("higgi13425/medicaldata")` 
