edited README for messy datasets

--- a/README.Rmd
+++ b/README.Rmd
@@ -61,11 +61,11 @@ Click on links below for more details about the dataset itself in the Descriptio
 | theoph          |   [theoph_desc](https://htmlpreview.github.io/?https://github.com/higgi13425/medicaldata/blob/master/man/description_docs/theoph_desc.html)  |     [theoph_codebook](https://htmlpreview.github.io/?https://github.com/higgi13425/medicaldata/blob/master/man/codebooks/theoph_codebook.html)  |  Prospective Cohort PK Study | 
 
 ## Messy Datasets
-I am doing a beta test of messy datasets, largely in Excel, with many annoying non-rectangular features that will help teach data cleaning/wrangling.
+I am doing a beta test of messy datasets, largely in Excel, with many annoying non-tidy and non-rectangular features that will help teach data cleaning/wrangling.
 
-You can open and view these from the GitHub repo in all of their messy Excel glory by going [here](https://github.com/higgi13425/medicaldata/tree/master/data-raw/messy_data) and clicking on one of the *.xlsx files to download it.
+You can open and view these from the GitHub repo in all of their messy Excel glory by going [here](https://github.com/higgi13425/medicaldata/tree/master/data-raw/messy_data) and clicking on one of the *.xlsx files, then clicking on the `View Raw` button to download it. You could also directly download these excel files by clicking on the URL links in the table below.
 
-You can read these directly from the urls below with the code below into RStudio.
+You can read these directly from the urls below with the code below into R.
 
 ```{r, eval=FALSE}
 # install.packages('openxlsx')
