--- a/README.Rmd
+++ b/README.Rmd
@@ -65,7 +65,7 @@ I am doing a beta test of messy datasets, largely in Excel, with many annoying n
 
 You can open and view these from the GitHub repo in all of their messy Excel glory by going [here](https://github.com/higgi13425/medicaldata/tree/master/data-raw/messy_data) and clicking on one of the *.xlsx files, then clicking on the `View Raw` button to download it. You could also directly download these excel files by clicking on the URL links in the table below.
 
-You can read these directly from the urls below with the code below into R.
+You can read these directly from the urls below with the example code below into R, which reads in the `messy_infarct` dataset.
 
 ```{r, eval=FALSE}
 # install.packages('openxlsx')
